Created separate files for all API modules. DBHelper can now connect to the database. Added more information to readme.
